--- a/shopping/index.html
+++ b/shopping/index.html
@@ -382,14 +382,74 @@
         </div><!-- quickmodule div end-->
         <!-- 最新资讯 精彩活动 -->
         <div class="newsmodule">
-        	<div class="label"><ul><li></li><li></li></ul></div>
-            <div class="content"></div>
-            <div class="content"></div>
+        	<div class="newsmodule_label"><ul><li class="selected">最新资讯</li><li>精彩活动</li></ul></div>
+            <div>
+                <div class="newsmodule_content">
+                    <ul>
+                        <li><p>仅18元起</p>下订单就送空调被</li>
+                        <li><p>好店推荐</p>排队也吃不上的店</li>
+                        <li><p>赏樱地图</p>带你去看樱花飘落</li>
+                        <li><p>畅购婚展</p>来就送炫彩咖啡壶</li>
+                        <li><p>越吃越瘦</p>10种刮油物不发胖</li>
+                        <li><p>大片上映</p>14年4月&nbsp;观影指南</li>
+                        <li><p>大片上映</p>14年4月&nbsp;观影指南</li>
+                    </ul>
+                </div>
+                <div class="newsmodule_content"></div>
+            </div>
         </div><!-- newsmodule div end -->
 	</div>
+    <div class="main_bottom">
+    	<div class="bottom">
+        	<div class="bottom_header"><img src="images/about_cg.png" /><h2>关于畅购</h2></div>
+            <div class="bottom_content">
+            	<ul class="ul_two_ways">
+                	<li>公司简介</li>
+                    <li>招贤纳才</li>
+                    <li>关注微博</li>
+                    <li>成长历程</li>
+                    <li>联系我们</li>
+                    <li>关注微信</li>
+                </ul>
+			</div>
+        </div><!-- bottom end -->
+        <div class="bottom">
+        	<div class="bottom_header"><img src="images/join_us.png" /><h2>商户加盟</h2></div>
+            <div class="bottom_content">
+            	<ul class="ul_two_ways">
+                	<li>加盟优势</li>
+                    <li>加盟资料</li>
+                    <li>终端介绍</li>
+                    <li>加盟流程</li>
+                    <li>售后服务</li>
+                    <li>自助申请</li>
+                </ul>
+			</div>
+        </div><!-- bottom end -->
+        <div class="bottom">
+        	<div class="bottom_header"><img src="images/questions.png" /><h2>常见问题</h2></div>
+            <div class="bottom_content">
+            	<ul>
+                	<li>畅购卡使用中遇到的相关问题？</li>
+                    <li>网上支付过程中遇到的相关问题？</li>
+                    <li>交费充值中遇到的相关问题？</li>
+                </ul>
+			</div>
+        </div><!-- bottom end -->
+        <div class="bottom">
+        	<div class="bottom_header"><img src="images/about_cg.png" /><h2>联系方式</h2></div>
+            <div class="bottom_content no_border">
+            	<ul>
+                	<li>服务热线：400-886-663</li>
+                    <li>各地分公司联系方式</li>
+                    <li>中华人民共和国支付业务许可证</li>
+                </ul>
+			</div>
+        </div><!-- bottom end -->
+    </div>
 </div><!-- main div end -->
 <div class="footer"></div>
 <script type="text/javascript" src="js/lib/jquery-1.7.2.min.js"></script>
-<script type="text/javascript" src="js/multinav.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
