--- a/shopping/index.html
+++ b/shopping/index.html
@@ -448,7 +448,12 @@
         </div><!-- bottom end -->
     </div>
 </div><!-- main div end -->
-<div class="footer"></div>
+<div class="clear"></div>
+<hr class="footer_line" />
+<div class="footer">
+	<p class="icp">沪ICP证：沪B2-20070030沪ICP备10008907号   ©2005-2013 DDMap</p>
+    <p class="icp"><img src="images/icp_images.png" /></p>
+</div>
 <script type="text/javascript" src="js/lib/jquery-1.7.2.min.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 </body>
