shopping website index
version 0.6

--- a/shopping/index.html
+++ b/shopping/index.html
@@ -6,27 +6,30 @@
 <link href="css/style.css"  rel="stylesheet" />
 </head>
 <body>
-<div class="header">
-	<div class="top">
-    	<span class="top_right">您还未登录，请登录&nbsp;|&nbsp;注册&nbsp;|&nbsp;商户自助&nbsp;|&nbsp;我的畅付通</span>
-    	<span class="top_left">上海市&nbsp;&nbsp;[切换城市]&nbsp;&nbsp;手机畅购</span>       
-    </div>
-    <div class="middle">
-        <img src="" width="150px" height="45px" class="middle_right" />
-        <div class="search">
-        	<span class="search_shops">商户</span>
-            <span class="search_button">搜索</span>
-            <div class="search_input">
-            	<input type='text' name="key_word" value='' />
-            </div>
+<div class="top">
+    <span class="top_right">您还未登录，请登录&nbsp;|&nbsp;注册&nbsp;|&nbsp;商户自助&nbsp;|&nbsp;我的畅付通</span>
+    <span class="top_left">上海市&nbsp;&nbsp;[切换城市]&nbsp;&nbsp;手机畅购</span>       
+</div>
+
+<div class="middle">
+	<img src="images/logo.png" class="middle_left" />  
+    <div class="search">
+        <span class="search_shops">商户</span>
+        <span class="search_button">搜索</span>
+        <div class="search_input">
+            <input type='text' name="key_word" value='' />
         </div>
-    	<img src="" width="210px" height="60px" class="middle_left" />      
-    </div>
-    <div class="nav">
-    	<span class="allshops">全部商户</span>
+    </div>    
+    <img src="images/hot_line.png" class="middle_right" />
+    <img src="images/qcode.png" class="middle_qcode" />
+</div>
+
+<div class="nav">
+	<div class="nav_middle">
+        <span class="allshops">全部商户</span>
         <span class="nav_bar">
-        	<ul>
-            	<li class="selected">首页</li>
+            <ul>
+                <li class="selected">首页</li>
                 <li>商户天地</li>
                 <li>精彩活动</li>
                 <li>最新资讯</li>
@@ -36,8 +39,10 @@
             </ul>
         </span>
     </div>
-    <hr class="divide_line" />
-</div><!-- header end -->
+</div>
+
+<hr class="divide_line" />
+<!-- header end -->
 <div class="main">
 	<div class="main_left">
         <div class="multinav">
