shopping website index
version 0.7

--- a/shopping/index.html
+++ b/shopping/index.html
@@ -354,7 +354,7 @@
         <div class="sugest_shop">
         	<h3>推荐商户</h3>
             <table>
-            	<tr><td><img src="images/sug_jdl.png"/></td><td><img src="images/sug_fm.png"/></td><td><img src="images/sug_sh.png"/></td><td><img src="images/sug_os.png"/></td><td></td></tr>
+            	<tr><td><img src="images/sug_jdl.png"/></td><td><img src="images/sug_fm.png"/></td><td><img src="images/sug_sh.png"/></td><td><img src="images/sug_os.png"/></td><td><img src="images/lifemarket.png"/></td></tr>
             	<tr><td><img src="images/sug_tesco.png"/></td><td><img src="images/sug_gome.png"/></td><td><img src="images/sug_kfc.png"/></td><td><img src="images/sug_bk.png"/></td><td><img src="images/sug_bbl.png" /></td></tr>
             </table>
         </div>
@@ -404,6 +404,7 @@
             </div>
         </div><!-- newsmodule div end -->
 	</div>
+    <div class="clear"></div>
     <div class="main_bottom">
     	<div class="bottom">
         	<div class="bottom_header"><img src="images/about_cg.png" /><h2>关于畅购</h2></div>
