shopping website index
version 0.7.1

--- a/shopping/index.html
+++ b/shopping/index.html
@@ -44,21 +44,21 @@
 <hr class="divide_line" />
 <!-- header end -->
 <div class="main">
-	<div class="main_left">
-        <div class="multinav">
+  <div class="main_left">
+      <div class="multinav">
             <ul class="multinav_bar">
-                <li>超市卖场</li>
-                <li>餐饮酒店</li>
-                <li>百货公司</li>
-                <li>连锁专卖</li>
-                <li>O2O商户</li>
-                <li>休娱乐</li>
-                <li>购物</li>
-                <li>丽人</li>
-                <li>结婚</li>
-                <li>亲子</li>
-                <li>运动健身</li>
-                <li>家装</li>
+                <li><img width="22px" height="21px" src="images/multi_nav_icon_1.png"/>超市卖场</li>
+                <li><img width="22px" height="22px" src="images/multi_nav_icon_2.png"/>餐饮酒店</li>
+                <li><img width="20px" height="20px" src="images/multi_nav_icon_3.png"/>百货公司</li>
+                <li><img width="21px" height="15px" src="images/multi_nav_icon_4.png"/>连锁专卖</li>
+                <li><img width="27px" height="21px" src="images/multi_nav_icon_5.png"/>O2O商户</li>
+                <li><img width="18px" height="25px" src="images/multi_nav_icon_6.png"/>休娱乐</li>
+                <li><img width="16px" height="19px" src="images/multi_nav_icon_7.png"/>购物</li>
+                <li><img width="14px" height="24px" src="images/multi_nav_icon_8.png"/>丽人</li>
+                <li><img width="25px" height="25px" src="images/multi_nav_icon_9.png"/>结婚</li>
+                <li><img width="23px" height="22px" src="images/multi_nav_icon_10.png"/>亲子</li>
+                <li><img width="21px" height="20px" src="images/multi_nav_icon_11.png"/>运动健身</li>
+                <li><img width="20px" height="20px" src="images/multi_nav_icon_12.png"/>家装</li>
             </ul>
         </div>
         <div class="multinav_tips">
@@ -388,7 +388,7 @@
         <!-- 最新资讯 精彩活动 -->
         <div class="newsmodule">
         	<div class="newsmodule_label"><ul><li class="selected">最新资讯</li><li>精彩活动</li></ul></div>
-            <div>
+            <div class="newsmodule_contents">
                 <div class="newsmodule_content">
                     <ul>
                         <li><p>仅18元起</p>下订单就送空调被</li>
@@ -400,7 +400,17 @@
                         <li><p>大片上映</p>14年4月&nbsp;观影指南</li>
                     </ul>
                 </div>
-                <div class="newsmodule_content"></div>
+                <div class="newsmodule_content">
+                	<ul>
+                        <li><p>仅18元起</p>下订单就送空调被</li>
+                        <li><p>好店推荐</p>排队也吃不上的店</li>
+                        <li><p>赏樱地图</p>带你去看樱花飘落</li>
+                        <li><p>畅购婚展</p>来就送炫彩咖啡壶</li>
+                        <li><p>越吃越瘦</p>10种刮油物不发胖</li>
+                        <li><p>大片上映</p>14年4月&nbsp;观影指南</li>
+                        <li><p>大片上映</p>14年4月&nbsp;观影指南</li>
+                    </ul>
+                </div>
             </div>
         </div><!-- newsmodule div end -->
 	</div>
@@ -443,7 +453,7 @@
 			</div>
         </div><!-- bottom end -->
         <div class="bottom">
-        	<div class="bottom_header"><img src="images/about_cg.png" /><h2>联系方式</h2></div>
+        	<div class="bottom_header"><img src="images/contact_us.png" /><h2>联系方式</h2></div>
             <div class="bottom_content no_border">
             	<ul>
                 	<li>服务热线：400-886-663</li>
