shopping weisite index
version 0.7.2

--- a/shopping/index.html
+++ b/shopping/index.html
@@ -368,7 +368,7 @@
             <input type="password" name="cardpwd" id="cardpwd" placeholder="密码默认为卡号后六位" />
             <img width="72px" height="24px" src="images/checkcode.png" class="validatecode" />
             <input type="text" name="validateCode" id="validateCode" class="validatecode_input" maxlength="4"/>
-            <input type="submit" value="查询" class="cardsubmit" />
+            <input type="button" class="cardsubmit" />
             </form>
         </div>
         <!-- 畅购便捷 -->
@@ -468,7 +468,7 @@
 <hr class="footer_line" />
 <div class="footer">
 	<p class="icp">沪ICP证：沪B2-20070030沪ICP备10008907号   ©2005-2013 DDMap</p>
-    <p class="icp"><img src="images/icp_images.png" /></p>
+    <p class="icp1"><img src="images/icp_images.png" /></p>
 </div>
 <script type="text/javascript" src="js/lib/jquery-1.7.2.min.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
