--- a/shopping/index.html
+++ b/shopping/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>畅购一卡通</title>
+<link href="css/focus.css" rel="stylesheet" />
 <link href="css/style.css"  rel="stylesheet" />
 </head>
 <body>
@@ -328,8 +329,15 @@
             </div>
         </div><!-- multinav_tips div end -->
         <!-- banner 动画 -->
-        <div class="banner">
-            <img width="556px" height="240px" src="images/banner.png" />
+		<div class="banner">
+            <div class="imgbox">
+                <ul id="banner_img">
+                    <li><a href="#"><img width="556px" height="240px" src="images/banner.png"> </a></li>
+                    <li><a href="#"><img width="556px" height="240px" src="images/banner.png"> </a></li>
+                    <li><a href="#"><img width="556px" height="240px" src="images/banner.png"> </a></li>
+                </ul>
+                <div class="imgnum"> <span class="">1</span> <span class="">2</span> <span class="onselect">3</span> </div>
+            </div>
         </div>
         <hr class="divide_line" />
         <!-- 热门商圈 -->
@@ -470,6 +478,7 @@
     <p class="icp1"><img src="images/icp_images.png" /></p>
 </div>
 <script type="text/javascript" src="js/lib/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="js/lib/focus.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
