shopping website index
drop boxes
cityliset
search

--- a/shopping/index.html
+++ b/shopping/index.html
@@ -9,7 +9,28 @@
 <body>
 <div class="top">
     <span class="top_right">您还未登录，请登录&nbsp;|&nbsp;注册&nbsp;|&nbsp;商户自助&nbsp;|&nbsp;我的畅付通</span>
-    <span class="top_left">上海市&nbsp;&nbsp;[切换城市]&nbsp;&nbsp;手机畅购</span>       
+    <span class="top_left">上海市&nbsp;&nbsp;<a href="javascript:void(0)" onclick="showCityList()">[切换城市]</a>&nbsp;&nbsp;手机畅购</span>
+    <div class="city_panel">
+    	<dl><dt>华北东北:</dt>
+        	<dd><ul>
+            	<li>北京</li><li>北京</li><li>北京北京</li><li>北京北京</li><li>北京</li><li>北京北京</li>
+                <li>北京北京</li><li>北京北京</li><li>北京北京</li><li>北京北京</li>
+            </ul></dd>
+        </dl>
+        <dl><dt>华北东北:</dt>
+        	<dd><ul>
+            	<li>北京</li><li>北京</li><li>北京北京</li><li>北京北京</li><li>北京</li><li>北京北京</li>
+                <li>北京北京</li><li>北京北京</li><li>北京北京</li><li>北京北京</li>
+            </ul></dd>
+        </dl>
+        <dl><dt>华北东北:</dt>
+        	<dd><ul>
+            	<li>北京</li><li>北京</li><li>北京北京</li><li>北京北京</li><li>北京</li><li>北京北京</li>
+                <li>北京北京</li><li>北京北京</li><li>北京北京</li><li>北京北京</li>
+            </ul></dd>
+        </dl>
+        <div class="more"><a href="#">更多城市</a></div>
+    </div>       
 </div>
 
 <div class="middle">
@@ -17,6 +38,13 @@
     <div class="search">
         <span class="search_shops">商户</span>
         <span class="search_button">搜索</span>
+        	<ul class="search_list">
+            	<li><a href="#">美食</a></li>
+                <li><a href="#">美食</a></li>
+                <li><a href="#">美食</a></li>
+                <li><a href="#1">美食</a></li>
+                <li><a href="#">美食美食</a></li>
+            </ul>
         <div class="search_input">
             <input type='text' name="key_word" value='' />
         </div>
