shopping website index
drop css finished

--- a/shopping/index.html
+++ b/shopping/index.html
@@ -13,20 +13,20 @@
     <div class="city_panel">
     	<dl><dt>华北东北:</dt>
         	<dd><ul>
-            	<li>北京</li><li>北京</li><li>北京北京</li><li>北京北京</li><li>北京</li><li>北京北京</li>
-                <li>北京北京</li><li>北京北京</li><li>北京北京</li><li>北京北京</li>
+            	<li><a href="javascript:void(0)" class="current">北京</a></li><li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京北京</a></li>
+                <li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li>
             </ul></dd>
         </dl>
         <dl><dt>华北东北:</dt>
         	<dd><ul>
-            	<li>北京</li><li>北京</li><li>北京北京</li><li>北京北京</li><li>北京</li><li>北京北京</li>
-                <li>北京北京</li><li>北京北京</li><li>北京北京</li><li>北京北京</li>
+				<li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京北京</a></li>
+                <li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li>
             </ul></dd>
         </dl>
         <dl><dt>华北东北:</dt>
         	<dd><ul>
-            	<li>北京</li><li>北京</li><li>北京北京</li><li>北京北京</li><li>北京</li><li>北京北京</li>
-                <li>北京北京</li><li>北京北京</li><li>北京北京</li><li>北京北京</li>
+				<li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京北京</a></li>
+                <li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li>
             </ul></dd>
         </dl>
         <div class="more"><a href="#">更多城市</a></div>
@@ -39,11 +39,11 @@
         <span class="search_shops">商户</span>
         <span class="search_button">搜索</span>
         	<ul class="search_list">
-            	<li><a href="#">美食</a></li>
-                <li><a href="#">美食</a></li>
-                <li><a href="#">美食</a></li>
-                <li><a href="#1">美食</a></li>
-                <li><a href="#">美食美食</a></li>
+            	<li><a href="javascript:void(0)" class="current">美食</a></li>
+                <li><a href="javascript:void(0)">美食</a></li>
+                <li><a href="javascript:void(0)">美食</a></li>
+                <li><a href="javascript:void(0)">美食</a></li>
+                <li><a href="javascript:void(0)">美食美食</a></li>
             </ul>
         <div class="search_input">
             <input type='text' name="key_word" value='' />
@@ -381,11 +381,56 @@
         </table><!-- 热门商圈 end -->      
         <hr class="divide_line" />
         <div class="quick_search">
-        	快速查找
-            <select name="search_type"><option selected value="类别">类别</option></select>
-            <select name="search_type"><option selected value="子类别">子类别</option></select>
-            <select name="search_type"><option selected value="所在商圈">所在商圈</option></select>
-            <input type="button" value="查询" />
+        	<span class="quick_search_title">快速查找</span>
+            <a href="javascript:void(0)"><span class="select select_type">类别</span></a>
+            <a href="javascript:void(0)"><span class="select select_subtype">子类别</span></a>
+            <a href="javascript:void(0)"><span class="select select_circle">所在商圈</span></a>
+            <span class="quick_search_btn"><input type="button" value="查询" /></span>
+            <ul class="quick_search_type">
+            	<li class="current"><a href="javascript:void(0)">类别</a></li>
+                <li><a href="javascript:void(0)">美食</a></li>
+                <li><a href="javascript:void(0)">美食</a></li>
+                <li><a href="javascript:void(0)">美食</a></li>
+                <li><a href="javascript:void(0)">美食美食</a></li>
+            </ul>
+            <div class="quick_search_subpanel quick_search_subtype">
+            	<div><a href="javascript:void(0)">[所有类别]</a></div>
+                <ul class="subtype">
+                    <li><a href="javascript:void(0)" class="current">北京</a></li><li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li>
+                </ul>
+                <dl><dt><a href="javascript:void(0)">华北东北:</a></dt>
+                    <dd><ul>
+                        <li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li>
+                    </ul></dd>
+                </dl>
+                <dl><dt><a href="javascript:void(0)">华北东北:</a></dt>
+                    <dd><ul>
+                        <li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li>
+                    </ul></dd>
+                </dl>
+                <dl><dt><a href="javascript:void(0)">华北东北</a>:</dt>
+                    <dd><ul>
+                        <li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li>
+                    </ul></dd>
+                </dl>
+    		</div>
+            <div class="quick_search_subpanel quick_search_circle">
+                <dl><dt>商圈:</dt>
+                    <dd><ul>
+                        <li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li>
+                    </ul></dd>
+                </dl>
+                <dl><dt>华北东北:</dt>
+                    <dd><ul>
+                        <li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li>
+                    </ul></dd>
+                </dl>
+                <dl><dt>华北东北:</dt>
+                    <dd><ul>
+                        <li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li><li><a href="javascript:void(0)">北京北京</a></li>
+                    </ul></dd>
+                </dl>
+    		</div>
         </div>
         <div class="sugest_shop">
         	<h3>推荐商户</h3>
