--- a/carNetWeb/WebRoot/index.htm
+++ b/carNetWeb/WebRoot/index.htm
@@ -30,6 +30,7 @@
 }
 </style>
 <script type="text/javascript" src="./js/jquery.scrollto.js"></script>
+<script type="text/javascript" src="js/site.js"></script>
 </head>
 
 <body class="home blog">
