--- a/carNetWeb/WebRoot/index.htm
+++ b/carNetWeb/WebRoot/index.htm
@@ -309,35 +309,35 @@
 								<div id="tab_con">
 									<div class="evaluating" id="tabcon0">
 										<ul>
-											<li><a href="http://www.leiphone.com/zt-lexing.html" target="_blank"> <img
-													src="images/yh242.jpg" alt="">
+											<li><a href="#" target="_blank">
+                                            	<div></div>
 											</a></li>
-											<li><a href="http://www.leiphone.com/existence-of-routers.html" target="_blank"> <img
-													src="images/专题小图.jpg" alt="">
+											<li><a href="#" target="_blank"> 
+                                            	<div></div>
 											</a></li>
-											<li><a href="http://www.leiphone.com/zt-leike-2.html" target="_blank"> <img
-													src="images/leike242.jpg" alt="">
+											<li><a href="#" target="_blank"> 
+                                            	<div></div>
 											</a></li>
-											<li class="more"><a href="http://www.leiphone.com/category/special">More&gt;&gt;</a></li>
+											<li class="more"><a href="#">More&gt;&gt;</a></li>
 										</ul>
 									</div>
 									<div class="evaluating fdiv" id="tabcon1">
 										<ul>
-											<li><a href="http://www.leiphone.com/fenghui-smart-kitchen.html" target="_blank"> <img
-													src="images/tongue_banner.jpg" alt="">
+											<li><a href="#" target="_blank">
+                                            	<div></div>
 											</a></li>
-											<li><a href="http://www.leiphone.com/fenghui-automobile.html" target="_blank"> <img
-													src="images/0310.jpg" alt="">
+											<li><a href="#" target="_blank"> 
+                                            	<div></div>
 											</a></li>
-											<li><a href="http://www.leiphone.com/fenghui-router.html" target="_blank"> <img
-													src="images/0211.jpg" alt="">
+											<li><a href="http://www.leiphone.com/fenghui-router.html" target="_blank">
+                                            	<div></div>
 											</a></li>
 											<li class="more"><a href="http://www.leiphone.com/category/new-active">More&gt;&gt;</a></li>
 										</ul>
 									</div>
 								</div>
 							</div>
-							<script type="text/javascript">
+				<script type="text/javascript">
                     function tabswitch(i){
                         jQuery('#tabcont'+(1-i)).removeClass('fli');
                         jQuery('#tabcon'+(1-i)).removeClass('fdiv');
