--- a/carNetWeb/WebRoot/index.html
+++ b/carNetWeb/WebRoot/index.html
@@ -38,7 +38,81 @@
             <input type="text" class="search" name="search" value+"" />
         </div>
     </div>
-    <div class="main"></div>
-    <div class="footer"></div>    
+    <div class="clear"></div>
+    <div class="main">
+   	  <div class="main_left">
+        	<div class="banner">
+            	<img src="images/banner_1.png" />
+                <div class="banner_box">
+                	<h3>百度下周推CarNet<br/>
+                	国内重磅？！</h3>
+                	<p>&gt;more</p>
+                </div>
+                <div class="banner_box">
+                	<h3>特斯拉与中国电信车联网通讯支持<br/>谁在放风？</h3>
+                	<p>&gt;more</p>
+                </div>
+                <img src="images/banner_2.png" class="banner_right" />
+                <img src="images/banner_3.png" class="banner_right" />
+        </div><!-- banner end-->
+        <div class="recomms">
+        	<h3>&gt;&nbsp;产品</h3>
+            <ul class="recomms_content">
+                <li><b>【关注新品】</b>车联网跨世纪新品来了哦</li>
+                <li><b>【关注新品】</b>车联网跨世纪新品来了哦</li>
+                <li><b>【关注新品】</b>车联网跨世纪新品来了哦</li>
+                <li><b>【关注新品】</b>车联网跨世纪新品来了哦</li>
+            </ul>
+            <h3>&gt;&nbsp;评测</h3>
+            <ul class="recomms_content">
+                <li><b>【你评我测】</b>车联网跨世纪评测来了哦</li>
+                <li><b>【你评我测】</b>车联网跨世纪评测来了哦</li>
+            </ul>
+        </div><!-- recomms end -->
+        <div class="article_list">
+        	<div class="head_line"></div>
+        	<div class="article">
+            	<img src="images/content_pg.png" />
+                <h3>百度下周推CarNet会是国内车联网的一发重磅吗？</h3>
+                <p>2014北京国际汽车展览会各大车商都卯足了劲，有线报指包括苏菲玛索金秀贤贝克汉姆等在内的一大票红得发紫和半红不紫的明星都要来站台走秀，粉丝们大可到现场去碰碰运气。</p>
+                <p>但关于车展的诸多线报中，个人认为最有价值的并非到场的明星或嫩模都有谁谁谁，而是据传在此期间百度将推出车联网系统CarNet。</p>
+            </div>
+        </div><!-- article_list end-->
+      </div><!-- main_left end-->
+      <div class="main_right">
+      	<div class="right_comms">
+        	<ul>
+            	<li class="focus">最新专题</li>
+                <li>活动日历</li>
+            </ul>
+            <div class="news_message show">
+            	<h3>真实的车联网</h3>
+                <p>汽车、后市场、媒体、移动互联网、大数据、云计算</p>
+                <h3>汽车后市场大数据</h3>
+                <p>未来几年、类似车载黑匣子的系统会自动记录车辆的大量数据</p>
+                <h3>真实的车联网</h3>
+                <p>汽车、后市场、媒体、移动互联网、大数据、云计算</p>
+                <h3>汽车后市场大数据</h3>
+                <p>未来几年、类似车载黑匣子的系统会自动记录车辆的大量数据</p>
+            </div>
+            <div class="calender">
+            	this is the calender
+            </div>
+        </div><!-- right_comms end -->
+        <div class="right_advlist">
+      		<div class="adv">
+            	<img src="images/adv_1.png" />
+            </div>
+            <div class="adv">
+            	<img src="images/adv_2.png" />
+            </div>
+            <div class="adv">
+            	<img src="images/adv_3.png" />
+            </div>
+		</div> <!-- right_advlist end -->
+      </div><!-- main_right end -->
+    </div><!-- main end -->
+    <!-- no footer -->
+    <!-- <div class="footer"></div> -->
 </body>
 </html>
