--- a/carNetWeb/WebRoot/index.html
+++ b/carNetWeb/WebRoot/index.html
@@ -158,7 +158,12 @@
                 <li><img src="images/plogo_5.png"</li>
             </ul>
         </div>
-        <div class="footer_list"></div>
+        <div class="footer_list copyright">
+        	<p>本站由 WebLuker 提供 CDN 加速服务，开发协作工具由 Fengche.co 提供</p>
+            <p>Powered By Ruby China</p>
+            <p>&copy;2011-2014 36氪</p>
+            <p>京ICP备11027501号</p>
+        </div>
         <div class="clear"></div>
     </div>
 </body>
