--- a/carNetWeb/WebRoot/index.html
+++ b/carNetWeb/WebRoot/index.html
@@ -77,6 +77,15 @@
                 <h3>百度下周推CarNet会是国内车联网的一发重磅吗？</h3>
                 <p>2014北京国际汽车展览会各大车商都卯足了劲，有线报指包括苏菲玛索金秀贤贝克汉姆等在内的一大票红得发紫和半红不紫的明星都要来站台走秀，粉丝们大可到现场去碰碰运气。</p>
                 <p>但关于车展的诸多线报中，个人认为最有价值的并非到场的明星或嫩模都有谁谁谁，而是据传在此期间百度将推出车联网系统CarNet。</p>
+                <div class="clear"></div>
+            </div>
+            <div class="article">
+            	<img src="images/content_pg.png" />
+                <h3>百度下周推CarNet会是国内车联网的一发重磅吗？</h3>
+                <p class="subtitle">搜狐汽车  .  2014-05-31 13:34:58</p>
+                <p>2014北京国际汽车展览会各大车商都卯足了劲，有线报指包括苏菲玛索金秀贤贝克汉姆等在内的一大票红得发紫和半红不紫的明星都要来站台走秀，粉丝们大可到现场去碰碰运气。</p>
+                <p>但关于车展的诸多线报中，个人认为最有价值的并非到场的明星或嫩模都有谁谁谁，而是据传在此期间百度将推出车联网系统CarNet。</p>
+                <div class="clear"></div>
             </div>
         </div><!-- article_list end-->
       </div><!-- main_left end-->
