--- a/carNetWeb/WebRoot/index.html
+++ b/carNetWeb/WebRoot/index.html
@@ -7,7 +7,7 @@
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 </head>
 <body>
-	<div class="header">
+	<div class="header" id="header">
     	<div class="logo"></div>
         <div class="nav">
         	<div class="bars">
@@ -129,6 +129,9 @@
             <div class="adv">
             	<img src="images/adv_3.png" />
             </div>
+            <div class="adv" id="qr_float">
+            	<img src="images/daerwei.jpg" />
+            </div>
 		</div> <!-- right_advlist end -->
       </div><!-- main_right end -->
     </div><!-- main end -->
@@ -175,5 +178,6 @@
         </div>
         <div class="clear"></div>
     </div>
+    <script src="js/scroll.js" type="text/javascript"></script>
 </body>
 </html>
