--- a/carNetWeb/WebRoot/index.html
+++ b/carNetWeb/WebRoot/index.html
@@ -129,10 +129,10 @@
             <div class="adv">
             	<img src="images/adv_3.png" />
             </div>
-            <div class="adv" id="qr_float">
-            	<img src="images/daerwei.jpg" />
-            </div>
 		</div> <!-- right_advlist end -->
+        <div id="qr_float">
+            	<img src="images/daerwei.jpg" />
+		</div>
       </div><!-- main_right end -->
     </div><!-- main end -->
     <!-- no footer -->
