--- a/carNetWeb/WebRoot/newsdetail.html
+++ b/carNetWeb/WebRoot/newsdetail.html
@@ -112,7 +112,7 @@
             </div>
         </div>
       </div><!-- main_left end-->
-      <div class="main_right">
+      <div class="main_right cmr">
       	<div class="right_comms">
         	<ul>
             	<li class="focus">最新专题</li>
