--- a/carNetWeb/WebRoot/newsdetail3.html
+++ b/carNetWeb/WebRoot/newsdetail3.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>先锋车联网</title>
+<link href="css/bootstrap.css" rel="stylesheet" />
 <link href="css/style.css" rel="stylesheet" />
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 </head>
@@ -46,7 +47,7 @@
         	<div class="head_line"></div>
         	<div class="article">
                 <h3>百度下周推CarNet会是国内车联网的一发重磅吗？</h3>
-                <p class="subtitle">张&nbsp;驰&nbsp;&nbsp;2014-06-06&nbsp;23:06&nbsp;没有评论</p>
+                <p class="subtitle" style="font-weight: bolder">张&nbsp;驰&nbsp;&nbsp;2014-06-06&nbsp;23:06&nbsp;没有评论</p>
                 <p class="subtitle">标签：云服务&nbsp;&nbsp;亚马逊&nbsp;&nbsp;私有云</p>
                 <div class="article_pic"><img src="images/content_pg.png" /></div>
                 <p>2014北京国际汽车展览会各大车商都卯足了劲，有线报指包括苏菲玛索金秀贤贝克汉姆等在内的一大票红得发紫和半红不紫的明星都要来站台走秀，粉丝们大可到现场去碰碰运气。</p>
